# gcc-code-obfuscator

./: CMakeLists.txt  Makefile  README.md
src/: obfuscator.cpp
tests/: run.sh  test1.c
